--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
       </div>
       <div class="about-details">
         <div class="about-cards">
-<div class="card">
-  <img src="./assets/experience.png" alt="Experience icon" class="card-icon" />
-  <h3>Experience</h3>
-  <p>Data Analyst<br />Machine Learning Intern<br />Data Science Intern</p>
-</div>
-<div class="card">
-  <img src="./assets/education.png" alt="Education icon" class="card-icon" />
-  <h3>Education</h3>
-  <p>M.C.A. Masters Degree<br />B.C.A. Bachelors Degree</p>
-</div>
+          <div class="card">
+            <img src="./assets/experience.png" alt="Experience icon" class="icon" />
+            <h3>Experience</h3>
+            <p>Data Analyst<br />Machine Learning Intern<br />Data Science Intern</p>
+          </div>
+          <div class="card">
+            <img src="./assets/education.png" alt="Education icon" class="icon" />
+            <h3>Education</h3>
+            <p>M.C.A. Masters Degree<br />B.C.A. Bachelors Degree</p>
+          </div>
         </div>
         <div class="about-text">
           <p>Data Analyst with a Master’s and Bachelor’s in Computer Applications, proficient in Python, SQL, Excel, and Power BI. Experienced in data science and machine learning through impactful internships, delivering projects like sales dashboards and predictive models. Certified in SQL, Python, and Machine Learning, I’m passionate about driving actionable insights and seeking opportunities to contribute to innovative data-driven projects.</p>
