--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <p class="section-subtitle">Explore My</p>
     <h2 class="section-title">Experience</h2>
     <div class="experience-container">
-      <div class="card">
+      <div class="experience-card">
         <h3 class="job-title">
           <img src="./assets/office.png" alt="Industrybuying Logo" class="icon" />
           <strong>Industrybuying.com</strong> <span class="job-location">| Delhi, India</span>
