--- a/index.html
+++ b/index.html
@@ -97,66 +97,54 @@
     </div>
   </section>
 
-
   <section id="experience">
     <p class="section-subtitle">Explore My</p>
     <h2 class="section-title">Experience</h2>
     <div class="experience-container">
-        <div class="timeline">
-            <div class="timeline-item" data-side="left">
-                <div class="timeline-marker" aria-label="Timeline marker for Industrybuying.com"></div>
-                <div class="experience-card">
-                    <h3 class="job-title">
-                        <img src="./assets/office.png" alt="Industrybuying Logo" class="icon" />
-                        <strong>Industrybuying.com</strong> <span class="job-location">| Delhi, India</span>
-                        <br />
-                        <img src="./assets/worker.png" alt="Data Analyst Icon" class="icon" />
-                        <span class="job-role">Data Analyst</span> <span class="job-duration">(Apr 2024 – Present)</span>
-                    </h3>
-                    <ul class="job-details">
-                        <li>Developed customer segmentation models and dashboards using <span class="tech-tag">BigQuery</span> and <span class="tech-tag">Looker Studio</span>, <strong>driving a 20% sales increase</strong>.</li>
-                        <li>Created automated performance dashboards for 60+ sales agents, <strong>boosting productivity by 20%</strong>.</li>
-                        <li>Collaborated with finance to build dashboards, supporting <strong>16K new customer acquisitions</strong> and <strong>doubling sales growth</strong>.</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="timeline-item" data-side="right">
-                <div class="timeline-marker" aria-label="Timeline marker for TechCiti Technologies"></div>
-                <div class="experience-card">
-                    <h3 class="job-title">
-                        <img src="./assets/office.png" alt="TechCiti Logo" class="icon" />
-                        <strong>TechCiti Technologies Pvt Ltd</strong> <span class="job-location">| Bengaluru, India</span>
-                        <br />
-                        <img src="./assets/worker.png" alt="Machine Learning Intern Icon" class="icon" />
-                        <span class="job-role">Machine Learning Intern</span> <span class="job-duration">(Sep 2023 – Dec 2023)</span>
-                    </h3>
-                    <ul class="job-details">
-                        <li>Built an <span class="tech-tag">XGBoost</span> model to predict food delivery times, achieving an <strong>R² score of 0.82</strong>.</li>
-                        <li>Improved model accuracy by <strong>15%</strong> through data preprocessing and feature engineering.</li>
-                        <li>Developed a <span class="tech-tag">Streamlit</span> web app, <strong>reducing late deliveries by up to 30%</strong>.</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="timeline-item" data-side="left">
-                <div class="timeline-marker" aria-label="Timeline marker for iNeuron.ai"></div>
-                <div class="experience-card">
-                    <h3 class="job-title">
-                        <img src="./assets/office.png" alt="iNeuron Logo" class="icon" />
-                        <strong>iNeuron.ai</strong> <span class="job-location">| Bengaluru, India</span>
-                        <br />
-                        <img src="./assets/worker.png" alt="Data Science Intern Icon" class="icon" />
-                        <span class="job-role">Data Science Intern</span> <span class="job-duration">(Apr 2023 – Jul 2023)</span>
-                    </h3>
-                    <ul class="job-details">
-                        <li>Developed a flight ticket price prediction model with <strong>80% accuracy</strong>.</li>
-                        <li>Conducted EDA and model evaluation using <span class="tech-tag">Pandas</span>, <span class="tech-tag">NumPy</span>, and <span class="tech-tag">Scikit-Learn</span>.</li>
-                        <li>Leveraged <span class="tech-tag">Matplotlib</span> and <span class="tech-tag">Seaborn</span> for data visualization.</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+      <div class="experience-card">
+        <h3 class="job-title">
+          <img src="./assets/office.png" alt="Industrybuying Logo" class="icon" />
+          <strong>Industrybuying.com</strong> <span class="job-location">| Delhi, India</span>
+          <br />
+          <img src="./assets/worker.png" alt="Data Analyst Icon" class="icon" />
+          <span class="job-role">Data Analyst</span> <span class="job-duration">(Apr 2024 – Present)</span>
+        </h3>
+        <ul class="job-details">
+          <li>Developed customer segmentation models and dashboards using BigQuery and Looker Studio, driving a 20% sales increase.</li>
+          <li>Created automated performance dashboards for 60+ sales agents, boosting productivity by 20%.</li>
+          <li>Collaborated with finance to build dashboards, supporting 16K new customer acquisitions and doubling sales growth.</li>
+        </ul>
+      </div>
+      <div class="experience-card">
+        <h3 class="job-title">
+          <img src="./assets/office.png" alt="TechCiti Logo" class="icon" />
+          <strong>TechCiti Technologies Pvt Ltd</strong> <span class="job-location">| Bengaluru, India</span>
+          <br />
+          <img src="./assets/worker.png" alt="Machine Learning Intern Icon" class="icon" />
+          <span class="job-role">Machine Learning Intern</span> <span class="job-duration">(Sep 2023 – Dec 2023)</span>
+        </h3>
+        <ul class="job-details">
+          <li>Built an XGBoost model to predict food delivery times, achieving an R² score of 0.82.</li>
+          <li>Improved model accuracy by 15% through data preprocessing and feature engineering.</li>
+          <li>Developed a Streamlit web app, reducing late deliveries by up to 30%.</li>
+        </ul>
+      </div>
+      <div class="experience-card">
+        <h3 class="job-title">
+          <img src="./assets/office.png" alt="iNeuron Logo" class="icon" />
+          <strong>iNeuron.ai</strong> <span class="job-location">| Bengaluru, India</span>
+          <br />
+          <img src="./assets/worker.png" alt="Data Science Intern Icon" class="icon" />
+          <span class="job-role">Data Science Intern</span> <span class="job-duration">(Apr 2023 – Jul 2023)</span>
+        </h3>
+        <ul class="job-details">
+          <li>Developed a flight ticket price prediction model with 80% accuracy.</li>
+          <li>Conducted EDA and model evaluation using Pandas, NumPy, and Scikit-Learn.</li>
+          <li>Leveraged Matplotlib and Seaborn for data visualization.</li>
+        </ul>
+      </div>
     </div>
-</section>
+  </section>
 
   <section id="skills">
     <p class="section-subtitle">Explore My</p>
