--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
   </nav>
 
-  <section id="profile">
+  <!-- <section id="profile">
     <div class="profile-container">
       <img src="./assets/picofme (7).png" alt="Ambuj Nayan Mishra profile picture" class="profile-pic" />
       <div class="profile-text">
@@ -68,7 +68,34 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
+
+  <section id="profile">
+    <div class="profile-container">
+        <div class="profile-pic-container" aria-label="Profile picture animation">
+            <img src="./assets/picofme (7).png" alt="Ambuj Nayan Mishra profile picture" class="profile-pic" />
+        </div>
+        <div class="profile-text">
+            <p class="section-subtitle" data-animate="fadeInUp">Hello, I'm</p>
+            <h1 class="section-title" data-animate="fadeInUp">Ambuj Nayan Mishra</h1>
+            <h2 class="typewrite" data-period="2000" data-type='["Data Analyst", "Machine Learning Engineer"]' data-animate="fadeInUp">
+                <span class="wrap"></span>
+            </h2>
+            <div class="btn-container" data-animate="fadeInUp">
+                <a href="./assets/Ambuj Resume.pdf" class="btn btn-color-1 pulse" download>Download Resume</a>
+                <a href="#contact" class="btn btn-color-2">Contact Me</a>
+            </div>
+            <div class="socials-container" data-animate="fadeInUp">
+                <a href="https://www.linkedin.com/in/ambuj-/" aria-label="LinkedIn Profile" class="social-link">
+                    <img src="./assets/linkedin.png" alt="LinkedIn" class="social-icon" data-tooltip="LinkedIn" />
+                </a>
+                <a href="https://github.com/ambuj6392" aria-label="GitHub Profile" class="social-link">
+                    <img src="./assets/github.png" alt="GitHub" class="social-icon" data-tooltip="GitHub" />
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 
   <section id="about">
     <p class="section-subtitle">Get to Know More</p>
