--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="profile-container">
       <img src="./assets/picofme (7).png" alt="Ambuj Nayan Mishra profile picture" class="profile-pic" />
       <div class="profile-text">
-        <p class="section-subtitle">Hello, I'm</p>
+        <p class="section-subtitle">Hello, 'm</p>
         <h1 class="section-title">Ambuj Nayan Mishra</h1>
         <h2 class="typewrite" data-period="2000" data-type='["Data Analyst", "Machine Learning Engineer"]'>
           <span class="wrap"></span>
