--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./assets/hotel-reservation.jpg" alt="Hotel Reservation Prediction" class="project-img" />
+        <img src="./assets/10811.jpg" alt="Hotel Reservation Prediction" class="project-img" />
         <h3>Hotel Reservation Prediction - MLOps</h3>
         <p>Developed an MLOps pipeline for hotel reservation prediction using LightGBM, with Flask-based inference. Improved booking efficiency by 40%.</p>
         <div class="btn-container">
