--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
         <img src="./assets/10811.jpg" alt="Hotel Reservation Prediction" class="project-img" />
         <h3>Hotel Reservation Prediction - MLOps</h3>
         <p>Developed an MLOps pipeline for hotel reservation prediction using LightGBM, with Flask-based inference. Improved booking efficiency by 40%.</p>
+        <span class="tool-tag">Python</span>
         <div class="btn-container">
           <a href="https://github.com/ambuj6392/Hotel-Reservation-Prediction-MLOps" class="btn btn-color-2">View Project</a>
           <span class="tool-tag">Python</span>
