--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./assets/sales-dashboard.jpg" alt="Annual Sales Dashboard" class="project-img" />
+        <img src="./assets/Screenshot 2024-02-10 155307.jpg.jpg" alt="Annual Sales Dashboard" class="project-img" />
         <h3>Annual Sales Dashboard</h3>
         <p>Created an Excel-based sales dashboard for Vindra store to analyze 2022 sales, enabling data-driven strategies for 2023 growth.</p>
         <div class="btn-container">
@@ -213,7 +213,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./assets/ev-analysis.jpg" alt="Electric Vehicle Data Analysis" class="project-img" />
+        <img src="./assets/ELECTRIC VEHICLE.jpg" alt="Electric Vehicle Data Analysis" class="project-img" />
         <h3>Electric Vehicle Data Analysis</h3>
         <p>Analyzed electric vehicle data using Excel Pivot Tables and charts to identify trends and insights.</p>
         <div class="btn-container">
@@ -222,7 +222,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./assets/bank-loan.jpg" alt="Bank Loan Report" class="project-img" />
+        <img src="./assets/Bank loan.jpg" alt="Bank Loan Report" class="project-img" />
         <h3>Bank Loan Report</h3>
         <p>Developed a Power BI dashboard to visualize loan metrics, supporting data-driven lending decisions.</p>
         <div class="btn-container">
@@ -231,7 +231,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./assets/amazon-sales.jpg" alt="Amazon Sales Dashboard" class="project-img" />
+        <img src="./assets/Amazon.jpg" alt="Amazon Sales Dashboard" class="project-img" />
         <h3>Amazon Sales Dashboard</h3>
         <p>Designed Power BI dashboards for Amazon product sales and Prime performance, providing actionable insights.</p>
         <div class="btn-container">
