--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
           <span class="tool-tag">Python</span>
           <span class="tool-tag">Flask</span>
           <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">Python</span>
+          <span class="tool-tag">Flask</span>
+          <span class="tool-tag">MLflow</span>
         </div>
       </div>
       <div class="project-card">
