--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
           <span class="tool-tag">Python</span>
           <span class="tool-tag">Flask</span>
           <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">Flask</span>
+          <span class="tool-tag">MLflow</span>
         <div class="btn-container">
           <a href="https://github.com/ambuj6392/Colorectal_Cancer_Prediction" class="btn btn-color-2">View Project</a>
 
