--- a/index.html
+++ b/index.html
@@ -191,8 +191,6 @@
           <span class="tool-tag">Python</span>
           <span class="tool-tag">Flask</span>
           <span class="tool-tag">MLflow</span>
-          <span class="tool-tag">Flask</span>
-          <span class="tool-tag">MLflow</span>
         <div class="btn-container">
           <a href="https://github.com/ambuj6392/Colorectal_Cancer_Prediction" class="btn btn-color-2">View Project</a>
 
@@ -209,7 +207,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./assets/Screenshot 2024-02-10 155307.jpg.jpg" alt="Annual Sales Dashboard" class="project-img" />
+        <img src="./assets/Screenshot 2024-02-10 155211.jpg" alt="Annual Sales Dashboard" class="project-img" />
         <h3>Annual Sales Dashboard</h3>
         <p>Created an Excel-based sales dashboard for Vindra store to analyze 2022 sales, enabling data-driven strategies for 2023 growth.</p>
         <div class="btn-container">
