--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <span class="tool-tag">Flask</span>
           <span class="tool-tag">MLflow</span>
         <div class="btn-container">
-          <a href="https://github.com/ambuj6392/Colorectal_Cancer_Prediction" class="btn btn-color-2">View Project</a>
+          <a href="https://github.com/ambuj6392/Colorectal_Cancer_Prediction" class="btn btn-color-2" style="position:crenter;">View Project</a>
 
         </div>
       </div>
