--- a/index.html
+++ b/index.html
@@ -210,58 +210,78 @@
         <img src="./assets/Screenshot 2024-02-10 155307.jpg" alt="Annual Sales Dashboard" class="project-img" />
         <h3>Annual Sales Dashboard</h3>
         <p>Created an Excel-based sales dashboard for Vindra store to analyze 2022 sales, enabling data-driven strategies for 2023 growth.</p>
+          <span class="tool-tag">Python</span>
+          <span class="tool-tag">Flask</span>
+          <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">Python</span>
+          <span class="tool-tag">Flask</span>
+          <span class="tool-tag">MLflow</span>
         <div class="btn-container">
           <a href="./project-1.html" class="btn btn-color-2">View Project</a>
-          <span class="tool-tag">Excel</span>
         </div>
       </div>
       <div class="project-card">
         <img src="./assets/ELECTRIC VEHICLE.jpg" alt="Electric Vehicle Data Analysis" class="project-img" />
         <h3>Electric Vehicle Data Analysis</h3>
         <p>Analyzed electric vehicle data using Excel Pivot Tables and charts to identify trends and insights.</p>
+          <span class="tool-tag">Python</span>
+          <span class="tool-tag">Flask</span>
+          <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">Python</span>
+          <span class="tool-tag">Flask</span>
+          <span class="tool-tag">MLflow</span>
         <div class="btn-container">
           <a href="./project-5.html" class="btn btn-color-2">View Project</a>
-          <span class="tool-tag">Excel</span>
         </div>
       </div>
       <div class="project-card">
         <img src="./assets/Bank loan.jpg" alt="Bank Loan Report" class="project-img" />
         <h3>Bank Loan Report</h3>
         <p>Developed a Power BI dashboard to visualize loan metrics, supporting data-driven lending decisions.</p>
+          <span class="tool-tag">Python</span>
+          <span class="tool-tag">Flask</span>
+          <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">Python</span>
+          <span class="tool-tag">Flask</span>
+          <span class="tool-tag">MLflow</span>
         <div class="btn-container">
           <a href="./project-3.html" class="btn btn-color-2">View Project</a>
-          <span class="tool-tag">Power BI</span>
         </div>
       </div>
       <div class="project-card">
         <img src="./assets/Amazon.jpg" alt="Amazon Sales Dashboard" class="project-img" />
         <h3>Amazon Sales Dashboard</h3>
         <p>Designed Power BI dashboards for Amazon product sales and Prime performance, providing actionable insights.</p>
+          <span class="tool-tag">Python</span>
+          <span class="tool-tag">Flask</span>
+          <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">Python</span>
+          <span class="tool-tag">Flask</span>
+          <span class="tool-tag">MLflow</span>
         <div class="btn-container">
           <a href="./project-6.html" class="btn btn-color-2">View Project</a>
-          <span class="tool-tag">Power BI</span>
         </div>
       </div>
       <div class="project-card">
         <img src="./assets/hotel-booking.jpg" alt="Hotel Booking Analysis" class="project-img" />
         <h3>Hotel Booking Analysis</h3>
         <p>Analyzed hotel cancellation rates using Python, Pandas, and Seaborn to optimize revenue strategies.</p>
-        <div class="btn-container">
-          <a href="./project-2.html" class="btn btn-color-2">View Project</a>
           <span class="tool-tag">Python</span>
           <span class="tool-tag">Pandas</span>
           <span class="tool-tag">Seaborn</span>
+        <div class="btn-container">
+          <a href="./project-2.html" class="btn btn-color-2">View Project</a>
         </div>
       </div>
       <div class="project-card">
         <img src="./assets/cricket-analysis.jpg" alt="Best Bowler in Test Cricket" class="project-img" />
         <h3>Best Bowler in Test Cricket</h3>
         <p>Analyzed test cricket bowler performance using Python, Pandas, and Seaborn to identify top performers.</p>
-        <div class="btn-container">
-          <a href="./project-4.html" class="btn btn-color-2">View Project</a>
           <span class="tool-tag">Python</span>
           <span class="tool-tag">Pandas</span>
           <span class="tool-tag">Seaborn</span>
+        <div class="btn-container">
+          <a href="./project-4.html" class="btn btn-color-2">View Project</a>
         </div>
       </div>
     </div>
