--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
         <div class="btn-container">
           <a href="./assets/Ambuj Resume.pdf" class="btn btn-color-1" download>Download Resume</a>
           <a href="#contact" class="btn btn-color-2">Contact Me</a>
-        </div>
         <div class="socials-container">
           <a href="https://www.linkedin.com/in/ambuj-/" aria-label="LinkedIn Profile">
             <img src="./assets/linkedin.png" alt="LinkedIn" class="social-icon" />
@@ -66,6 +65,15 @@
             <img src="./assets/github.png" alt="GitHub" class="social-icon" />
           </a>
         </div>
+        </div>
+        <!-- <div class="socials-container">
+          <a href="https://www.linkedin.com/in/ambuj-/" aria-label="LinkedIn Profile">
+            <img src="./assets/linkedin.png" alt="LinkedIn" class="social-icon" />
+          </a>
+          <a href="https://github.com/ambuj6392" aria-label="GitHub Profile">
+            <img src="./assets/github.png" alt="GitHub" class="social-icon" />
+          </a>
+        </div> -->
       </div>
     </div>
   </section>
