--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
           <span class="job-role">Data Analyst</span> <span class="job-duration">(Apr 2024 – Present)</span>
         </h3>
         <ul class="job-details">
-          <li>Developed customer segmentation models and dashboards using BigQuery and Looker Studio, driving a 20% sales increase.</li>
-          <li>Created automated performance dashboards for 60+ sales agents, boosting productivity by 20%.</li>
-          <li>Collaborated with finance to build dashboards, supporting 16K new customer acquisitions and doubling sales growth.</li>
+          <li>Developed a customer segmentation model using clustering algorithms (KMeans, DBSCAN) implemented the Elbow Method to determine number of clusters, enhancing targeted campaigns and increasing ROI by 22%. </li>
+          <li>Managed performance tracking for 60+ online sales agents by building automated dashboards in Looker Studio using BigQuery,G-Sheets, delivering real-time insights that improved team productivity by 20%. </li>
+          <li>Collaborated with the finance team to identify credit customers developing dashboards and insights that enhanced the acquisition of 16K new customers and achieved 2x growth in sales. </li>
         </ul>
       </div>
       <div class="experience-card">
