--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         </h3>
         <ul class="job-details">
           <li>Built an XGBoost model to predict food delivery times, achieving an R² score of 0.82.</li>
-          <li>Improved model accuracy by 15% through data preprocessing and feature engineering.</li>
-          <li>Developed a Streamlit web app, reducing late deliveries by up to 30%.</li>
+          <li>Performed data preprocessing, cleaning, feature engineering, resulting 15% improvement in model accuracy.</li>
+          <li>Created a web app using Streamlit, improving delivery planning and potential to reduce late deliveries by 30%. </li>
         </ul>
       </div>
       <div class="experience-card">
@@ -138,9 +138,9 @@
           <span class="job-role">Data Science Intern</span> <span class="job-duration">(Apr 2023 – Jul 2023)</span>
         </h3>
         <ul class="job-details">
-          <li>Developed a flight ticket price prediction model with 80% accuracy.</li>
-          <li>Conducted EDA and model evaluation using Pandas, NumPy, and Scikit-Learn.</li>
-          <li>Leveraged Matplotlib and Seaborn for data visualization.</li>
+          <li>Built a machine learning model that will predict the flight ticket price with 80% of accuracy. </li>
+          <li>Worked on Data Collection, conducted (EDA), engaged in Model Selection, Training and Model Evaluation. </li>
+          <li>Maximized Python libraries such as Pandas, NumPy, Matplotlib, Seaborn, and Scikit-Learn for robust analysis. </li>
         </ul>
       </div>
     </div>
