--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./assets/hotel-booking.jpg" alt="Hotel Booking Analysis" class="project-img" />
+        <img src="./assets/istockphoto-1496092680-612x612.jpg" alt="Hotel Booking Analysis" class="project-img" />
         <h3>Hotel Booking Analysis</h3>
         <p>Analyzed hotel cancellation rates using Python, Pandas, and Seaborn to optimize revenue strategies.</p>
           <span class="tool-tag">Python</span>
@@ -274,7 +274,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./assets/cricket-analysis.jpg" alt="Best Bowler in Test Cricket" class="project-img" />
+        <img src="./assets/5481.jpg" alt="Best Bowler in Test Cricket" class="project-img" />
         <h3>Best Bowler in Test Cricket</h3>
         <p>Analyzed test cricket bowler performance using Python, Pandas, and Seaborn to identify top performers.</p>
           <span class="tool-tag">Python</span>
