--- a/index.html
+++ b/index.html
@@ -210,12 +210,11 @@
         <img src="./assets/Screenshot 2024-02-10 155307.jpg" alt="Annual Sales Dashboard" class="project-img" />
         <h3>Annual Sales Dashboard</h3>
         <p>Created an Excel-based sales dashboard for Vindra store to analyze 2022 sales, enabling data-driven strategies for 2023 growth.</p>
-          <span class="tool-tag">Python</span>
-          <span class="tool-tag">Flask</span>
-          <span class="tool-tag">MLflow</span>
-          <span class="tool-tag">Python</span>
-          <span class="tool-tag">Flask</span>
-          <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">Excel</span>
+          <span class="tool-tag">Pivot tables</span>
+          <span class="tool-tag">charts</span>
+          <span class="tool-tag">PowerPoint</span>
+          <span class="tool-tag">Data Cleaning</span>
         <div class="btn-container">
           <a href="./project-1.html" class="btn btn-color-2">View Project</a>
         </div>
@@ -224,12 +223,11 @@
         <img src="./assets/ELECTRIC VEHICLE.jpg" alt="Electric Vehicle Data Analysis" class="project-img" />
         <h3>Electric Vehicle Data Analysis</h3>
         <p>Analyzed electric vehicle data using Excel Pivot Tables and charts to identify trends and insights.</p>
-          <span class="tool-tag">Python</span>
-          <span class="tool-tag">Flask</span>
-          <span class="tool-tag">MLflow</span>
-          <span class="tool-tag">Python</span>
-          <span class="tool-tag">Flask</span>
-          <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">Excel</span>
+          <span class="tool-tag">Pivot tables</span>
+          <span class="tool-tag">charts</span>
+          <span class="tool-tag">PowerPoint</span>
+          <span class="tool-tag">Data Transformation</span>
         <div class="btn-container">
           <a href="./project-5.html" class="btn btn-color-2">View Project</a>
         </div>
@@ -238,12 +236,11 @@
         <img src="./assets/Bank loan.jpg" alt="Bank Loan Report" class="project-img" />
         <h3>Bank Loan Report</h3>
         <p>Developed a Power BI dashboard to visualize loan metrics, supporting data-driven lending decisions.</p>
-          <span class="tool-tag">Python</span>
-          <span class="tool-tag">Flask</span>
-          <span class="tool-tag">MLflow</span>
-          <span class="tool-tag">Python</span>
-          <span class="tool-tag">Flask</span>
-          <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">Power BI</span>
+          <span class="tool-tag">SQL</span>
+          <span class="tool-tag">Data Transformation</span>
+          <span class="tool-tag">Data Modelling]</span>
+          <span class="tool-tag">Dashboard</span>
         <div class="btn-container">
           <a href="./project-3.html" class="btn btn-color-2">View Project</a>
         </div>
@@ -252,12 +249,11 @@
         <img src="./assets/Amazon.jpg" alt="Amazon Sales Dashboard" class="project-img" />
         <h3>Amazon Sales Dashboard</h3>
         <p>Designed Power BI dashboards for Amazon product sales and Prime performance, providing actionable insights.</p>
+          <span class="tool-tag">Power BI</span>
           <span class="tool-tag">Python</span>
-          <span class="tool-tag">Flask</span>
-          <span class="tool-tag">MLflow</span>
-          <span class="tool-tag">Python</span>
-          <span class="tool-tag">Flask</span>
-          <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">Data Transformation</span>
+          <span class="tool-tag">Data Modelling]</span>
+          <span class="tool-tag">SQL</span>
         <div class="btn-container">
           <a href="./project-6.html" class="btn btn-color-2">View Project</a>
         </div>
@@ -269,6 +265,7 @@
           <span class="tool-tag">Python</span>
           <span class="tool-tag">Pandas</span>
           <span class="tool-tag">Seaborn</span>
+          <span class="tool-tag">Matplotlib</span>
         <div class="btn-container">
           <a href="./project-2.html" class="btn btn-color-2">View Project</a>
         </div>
@@ -280,6 +277,8 @@
           <span class="tool-tag">Python</span>
           <span class="tool-tag">Pandas</span>
           <span class="tool-tag">Seaborn</span>
+          <span class="tool-tag">EDA</span>
+          <span class="tool-tag">Statistical Analysis</span>
         <div class="btn-container">
           <a href="./project-4.html" class="btn btn-color-2">View Project</a>
         </div>
