--- a/index.html
+++ b/index.html
@@ -185,12 +185,11 @@
         <img src="./assets/Best-Colon-Cancer-Treatment-in-India.jpg" alt="Colorectal Cancer Prediction" class="project-img" />
         <h3>Colorectal Cancer Prediction - MLOps</h3>
         <p>Built an MLOps pipeline using LightGBM for cancer prediction, with real-time inference via Flask, reducing diagnostic latency by 40%. Integrated MLflow and DagsHub for experiment tracking.</p>
-          <span class="tool-tag">Python</span>
-          <span class="tool-tag">Flask</span>
           <span class="tool-tag">MLflow</span>
-          <span class="tool-tag">Python</span>
-          <span class="tool-tag">Flask</span>
-          <span class="tool-tag">MLflow</span>
+          <span class="tool-tag">DagsHub</span>
+          <span class="tool-tag">Docker</span>
+          <span class="tool-tag">Kubeflow</span>
+          <span class="tool-tag">Kubernetes</span>
         <div class="btn-container">
           <a href="https://github.com/ambuj6392/Colorectal_Cancer_Prediction" class="btn btn-color-2" style="position:crenter;">View Project</a>
 
@@ -200,8 +199,10 @@
         <img src="./assets/10811.jpg" alt="Hotel Reservation Prediction" class="project-img" />
         <h3>Hotel Reservation Prediction - MLOps</h3>
         <p>Developed an MLOps pipeline for hotel reservation prediction using LightGBM, with Flask-based inference. Improved booking efficiency by 40%.</p>
-        <span class="tool-tag">Python</span>
-        <span class="tool-tag">Flask</span>
+        <span class="tool-tag">MLOps pipeline</span>
+        <span class="tool-tag">CI/CD</span>
+        <span class="tool-tag">GitHub</span>
+        <span class="tool-tag">GCP</span>
         <div class="btn-container">
           <a href="https://github.com/ambuj6392/Hotel-Reservation-Prediction-MLOps" class="btn btn-color-2">View Project</a>
         </div>
@@ -214,7 +215,6 @@
           <span class="tool-tag">Pivot tables</span>
           <span class="tool-tag">charts</span>
           <span class="tool-tag">PowerPoint</span>
-          <span class="tool-tag">Data Cleaning</span>
         <div class="btn-container">
           <a href="./project-1.html" class="btn btn-color-2">View Project</a>
         </div>
@@ -227,7 +227,6 @@
           <span class="tool-tag">Pivot tables</span>
           <span class="tool-tag">charts</span>
           <span class="tool-tag">PowerPoint</span>
-          <span class="tool-tag">Data Transformation</span>
         <div class="btn-container">
           <a href="./project-5.html" class="btn btn-color-2">View Project</a>
         </div>
@@ -240,7 +239,6 @@
           <span class="tool-tag">SQL</span>
           <span class="tool-tag">Data Transformation</span>
           <span class="tool-tag">Data Modelling]</span>
-          <span class="tool-tag">Dashboard</span>
         <div class="btn-container">
           <a href="./project-3.html" class="btn btn-color-2">View Project</a>
         </div>
@@ -252,8 +250,7 @@
           <span class="tool-tag">Power BI</span>
           <span class="tool-tag">Python</span>
           <span class="tool-tag">Data Transformation</span>
-          <span class="tool-tag">Data Modelling]</span>
-          <span class="tool-tag">SQL</span>
+          <span class="tool-tag">Data Modelling]</span>MLflow
         <div class="btn-container">
           <a href="./project-6.html" class="btn btn-color-2">View Project</a>
         </div>
