--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
         <span class="tool-tag">CI/CD</span>
         <span class="tool-tag">GitHub</span>
         <span class="tool-tag">GCP</span>
+        <span class="tool-tag">Machine Learning</span>
         <div class="btn-container">
           <a href="https://github.com/ambuj6392/Hotel-Reservation-Prediction-MLOps" class="btn btn-color-2">View Project</a>
         </div>
@@ -250,7 +251,7 @@
           <span class="tool-tag">Power BI</span>
           <span class="tool-tag">Python</span>
           <span class="tool-tag">Data Transformation</span>
-          <span class="tool-tag">Data Modelling]</span>MLflow
+          <span class="tool-tag">Data Modelling</span>
         <div class="btn-container">
           <a href="./project-6.html" class="btn btn-color-2">View Project</a>
         </div>
