--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <span class="tool-tag">CI/CD</span>
         <span class="tool-tag">GitHub</span>
         <span class="tool-tag">GCP</span>
-        <span class="tool-tag">Machine Learning</span>
+        <span class="tool-tag">Jenkins</span>
         <div class="btn-container">
           <a href="https://github.com/ambuj6392/Hotel-Reservation-Prediction-MLOps" class="btn btn-color-2">View Project</a>
         </div>
