--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Portfolio of Ambuj Nayan Mishra, Data Analyst and Machine Learning Engineer" />
   <meta name="keywords" content="data analyst, machine learning, portfolio, Ambuj Nayan Mishra" />
   <meta name="author" content="Ambuj Nayan Mishra" />
-  <title>Ambuj Nayan Mishra - Portfolio</title>
+  <title>Ambuj Nayan - Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
