--- a/index.html
+++ b/index.html
@@ -2,6 +2,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        #profile {
+            padding: 50px 20px;
+            background-color: #fff;
+            text-align: center;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        #profile h2 {
+            font-size: 2.5em;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        #profile p {
+            font-size: 1.2em;
+            color: #666;
+            max-width: 600px;
+            margin: 0 auto 30px;
+        }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 20px;
+            justify-items: center;
+            padding: 0 20px;
+        }
+
+        .skill-item {
+            width: 100px;
+            height: 100px;
+            background-color: #f9f9f9;
+            border-radius: 10px;
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            animation: fadeIn 1s ease-in forwards;
+            opacity: 0;
+        }
+
+        /* Sequential fade-in delays */
+        .skill-item:nth-child(1) { animation-delay: 0.2s; }
+        .skill-item:nth-child(2) { animation-delay: 0.4s; }
+        .skill-item:nth-child(3) { animation-delay: 0.6s; }
+        .skill-item:nth-child(4) { animation-delay: 0.8s; }
+        .skill-item:nth-child(5) { animation-delay: 1.0s; }
+
+        .skill-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            padding: 10px;
+        }
+
+        .skill-item:hover {
+            transform: scale(1.1);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(20px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
+        /* Responsive design */
+        @media (max-width: 600px) {
+            .skills-grid {
+                grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            }
+
+            .skill-item {
+                width: 80px;
+                height: 80px;
+            }
+
+            #profile h2 {
+                font-size: 2em;
+            }
+
+            #profile p {
+                font-size: 1em;
+            }
+        }
+    </style>
+
+
+
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfolio of Ambuj Nayan Mishra, Data Analyst and Machine Learning Engineer" />
@@ -68,6 +166,26 @@
         </div>
       </div>
     </div>
+
+    <div class="skills-grid">
+            <div class="skill-item">
+                <img src="./assets/python-logo.png.png" alt="Python Logo">
+            </div>
+            <div class="skill-item">
+                <img src="./assets/pngwing.com (1).png" alt="SQL Logo">
+            </div>
+            <div class="skill-item">
+                <img src="./assets/powerbi.png" alt="Power BI Logo">
+            </div>
+            <div class="skill-item">
+                <img src="./assets/Pandas.png" alt="Pandas Logo">
+            </div>
+            <div class="skill-item">
+                <img src="./assets/seaborn Logo Vector.png" alt="Seaborn Logo">
+            </div>
+      </div>
+    
+
   </section>
 
   <section id="about">
