--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         /* Skills Grid */
         .skills-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+            grid-template-rows: repeat(auto-fit, minmax(80px, 1fr));
             gap: 1rem;
             justify-items: center;
             padding: 1rem 0;
